<resources>
    <string name="app_name">TabbedMediaApplication</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="http">HTTP</string>
    <string name="stream">Stream</string>
    <string name="sd">SD</string>
    <string name="uri">Uri</string>
    <string name="raw">Raw</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="loop">Loop</string>
    <string name="backward">Back</string>
    <string name="forward">Forw</string>
    <string name="info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>